changes binds to qwerty layout, adds crosshair settings, adds radar settings, adds decal clearing to walk

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,5 +1,5 @@
 // Sensitivity
-sensitivity 1.77
+sensitivity 3.1
 
 // Removes the shifting of the arm when crouching down.
 cl_viewmodel_shift_left_amt "0"
@@ -74,23 +74,45 @@ bind tab +tabnet
 
 bind w "+forward"
 bind a "+moveleft"
-bind r "+back"
-bind s "+moveright"
-bind f "+use"
-bind p "+reload"
+bind s "+back"
+bind d "+moveright"
+bind e "+use"
+bind r "+reload"
 bind q "use weapon_smokegrenade; buy smokegrenade"
-bind t "use weapon_flashbang; buy flashbang"
-bind d "use weapon_hegrenade; buy hegrenade"
+bind f "use weapon_flashbang; buy flashbang"
+bind g "use weapon_hegrenade; buy hegrenade"
 bind h "use weapon_incgrenade; use weapon_molotov; buy incgrenade; buy molotov"
 bind x "use weapon_decoy; buy decoy"
-bind g "+spray_menu"
-bind j "messagemode"
-bind l "messagemode2"
-bind u "incrementvar voice_enable 0 1 1"
-bind y "incrementvar volume 0 1 1"
+bind t "+spray_menu"
+bind y "messagemode"
+bind u "messagemode2"
+bind i "incrementvar voice_enable 0 1 1"
+bind o "incrementvar volume 0 1 1"
 bind z "drop"
-bind n "buymenu"
+bind j "buymenu"
 bind m "teammenu"
 bind v "+voicerecord"
+bind mwheelup "+jump"
+bind mwheeldown "+jump"
+bind shift "+speed; r_cleardecals"
+
+// Radar
+
+cl_hud_radar_scale 1
+cl_radar_icon_scale_min 0.4
+cl_radar_scale 0.4
+cl_radar_rotate 1
+cl_radar_square_with_scoreboard 1
+cl_radar_always_centered 1
+
+// Crosshair
+
+cl_crosshairstyle 4
+cl_crosshairsize 2
+cl_crosshairthickness 1
+cl_crosshair_drawoutline 0
+cl_crosshairdot 0
+cl_crosshairgap -2
+cl_crosshaircolor 1
 
 echo "Custom config loaded"
