--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,5 +1,5 @@
 // Sensitivity
-sensitivity 3.1
+sensitivity "3.1"
 
 // Removes the shifting of the arm when crouching down.
 cl_viewmodel_shift_left_amt "0"
@@ -12,6 +12,15 @@ cl_bobamt_vert "0"
 
 // Scales the HUD depending on what resolution you use, 1 is max.
 hud_scaling "1"
+
+// Disables help notifications
+gameinstructor_enable "0"
+
+// Brightness
+mat_monitorgamma "1.8"
+
+// Remove player names on Crosshair
+hud_showtargetid 0
 
 // Custom audio settings
 dsp_enhance_stereo "0"
@@ -46,7 +55,7 @@ fps_max "500"
 cl_bobcycle "0.98"
 
 // Disables tracers in the first person viewmodel
-r_drawtracers_firstperson "0"
+r_drawtracers_firstperson "1"
 
 // Disables visual recoil in the first person viewmodel
 viewmodel_recoil "0"
@@ -98,21 +107,11 @@ bind shift "+speed; r_cleardecals"
 
 // Radar
 
-cl_hud_radar_scale 1
-cl_radar_icon_scale_min 0.4
-cl_radar_scale 0.4
-cl_radar_rotate 1
-cl_radar_square_with_scoreboard 1
-cl_radar_always_centered 1
-
-// Crosshair
-
-cl_crosshairstyle 4
-cl_crosshairsize 2
-cl_crosshairthickness 1
-cl_crosshair_drawoutline 0
-cl_crosshairdot 0
-cl_crosshairgap -2
-cl_crosshaircolor 1
+cl_hud_radar_scale "1"
+cl_radar_icon_scale_min "0.4"
+cl_radar_scale "0.4"
+cl_radar_rotate "1"
+cl_radar_square_with_scoreboard "1"
+cl_radar_always_centered "1"
 
 echo "Custom config loaded"
