--- a/practice.cfg
+++ b/practice.cfg
@@ -1,46 +1,32 @@
-sv_cheats "1"
-mp_limitteams "0"
-mp_autoteambalance "0"
-mp_roundtime "60"
-mp_roundtime_defuse "0"
-mp_ignore_round_win_conditions "1"
-mp_maxmoney "60000"
-mp_startmoney "60000"
-mp_freezetime "0"
-mp_buytime "9999"
-mp_buy_anywhere "1"
-sv_infinite_ammo "2"
-ammo_grenade_limit_total "5"
-
+// Server config
+sv_cheats 1
+mp_limitteams 0
+mp_autoteambalance 0
+mp_roundtime 60
+mp_roundtime_defuse 60
+mp_maxmoney 60000
+mp_startmoney 60000
+mp_freezetime 0
+mp_buytime 9999
+mp_buy_anywhere 1
+sv_infinite_ammo 1
+ammo_grenade_limit_total 5
 bot_kick
 mp_warmup_end
-mp_restartgame "1"
 
-sv_grenade_trajectory "1"
-sv_grenade_trajectory_time "20"
+// Practice
+sv_grenade_trajectory 1
+sv_grenade_trajectory_time 10
+sv_showimpacts 1
+sv_showimpacts_time 10
 
-god
-bot_stop "1"
+mp_restartgame 1
 
-// Add bots
-bot_add_ct
-bot_add_ct
-bot_add_ct
-bot_add_ct
-bot_add_ct
-bot_add_ct
-bot_add_ct
-bot_add_ct
-bot_add_ct
-bot_add_ct
-bot_add_ct
-bot_add_t
-bot_add_t
-bot_add_t
-bot_add_t
-bot_add_t
-bot_add_t
-bot_add_t
-bot_add_t
-bot_add_t
-bot_add_t
+echo "                  __ _         _                 _          _ "
+echo "                 / _(_)       | |               | |        | |"
+echo "  ___ ___  _ __ | |_ _  __ _  | | ___   __ _  __| | ___  __| |"
+echo " / __/ _ \| '_ \|  _| |/ _` | | |/ _ \ / _` |/ _` |/ _ \/ _` |"
+echo "| (_| (_) | | | | | | | (_| | | | (_) | (_| | (_| |  __/ (_| |"
+echo " \___\___/|_| |_|_| |_|\__, | |_|\___/ \__,_|\__,_|\___|\__,_|"
+echo "                        __/ |                                 "
+echo "                       |___/                                  "
